# telegram-expense-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run_polling.py
.firecrawl/: stitch-project.md  stitch-setup.md
.stitch-mockups/: dashboard-v2.html  dashboard.html
alembic/: env.py
alembic/versions/: 3260039d9602_add_image_hash_column.py  a1b2c3d4e5f6_add_expense_type_column.py  c4d2a7e91b03_add_window_to_scheduled_reports.py  ff9b1d6fbb77_initial_tables.py
designs/extracted/stitch_expense_tracker_admin_panel/: DESIGN.md
designs/extracted/stitch_expense_tracker_admin_panel__1_/: code.html
designs/extracted/stitch_expense_tracker_admin_panel__2_/: code.html
designs/extracted/stitch_expense_tracker_admin_panel__3_/: code.html
scripts/: backfill_eur.py  seed.py  test_enhance.py
src/: config.py  main.py
src/admin/: dependencies.py  router.py
src/admin/routes/: dashboard.py  (+3 more)
src/bot/: conversations.py  handlers.py  keyboards.py  telegram_bot.py
src/models/: __init__.py  database.py  exchange_rate.py  expense.py  schedule.py
src/schemas/: expense.py
src/services/: currency_service.py  dedup_service.py  email_service.py  expense_service.py  image_enhance.py  receipt_parser.py  report_agent.py  report_presets.py  report_service.py  scheduler_runner.py  scheduler_service.py
src/utils/: filters.py
static/: admin.css
templates/: report.html
templates/admin/: base.html  dashboard.html
tests/: test_filters.py  test_receipt_parser.py  test_schemas.py
(+11 files in other folders)
